# faststack

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DEVELOPING.md  Makefile  README.md  TESTING.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  dependency-review.yml  lint.yml  pre-commit.yml
cli/: __init__.py  cmd_add_entity.py  cmd_generate.py  cmd_init.py  cmd_list.py  cmd_migrate.py  field_mappings.py  model_introspector.py  yaml_parser.py
docs/architecture/adr/: 000-adr-template.md  001-async-first-no-sync.md  002-protocol-based-repositories.md  003-yaml-entity-definitions.md  004-rfc7807-error-responses.md  005-crud-service-lifecycle-hooks.md  006-file-ownership-model.md  007-v1-scope-boundary.md  008-makefile-for-developer-workflow.md  index.md
docs/design/: fastapi-generator-plan.md
docs/implementation/: v1-implementation-plan.md
examples/: rag_modulo.yaml  smoke_test_orchestrator.py
faststack_core/: setup.py
faststack_core/base/: entity.py  permissions.py  repository.py  service.py
faststack_core/database/: session.py
faststack_core/exceptions/: domain.py  handlers.py
faststack_core/health/: endpoints.py
faststack_core/logging/: config.py  masking.py  structured_logger.py
faststack_core/middleware/: correlation_id.py  request_logging.py  security_headers.py
faststack_core/settings/: config.py
templates/project/: Dockerfile.j2  alembic.ini.j2  alembic_env.py.j2  config.py.j2  conftest.py.j2  docker-compose.yml.j2  main.py.j2  pyproject.toml.j2
templates/simple/: conftest_integration.py.j2  dependencies.py.j2  factory.py.j2  fake_repository.py.j2  model.py.j2  repository.py.j2  router.py.j2  schema.py.j2  service.py.j2  test_integration.py.j2  test_unit_service.py.j2
tests/test_cli/: conftest.py  test_add_entity.py  test_field_mappings.py  test_generate.py  test_init.py  test_list.py  test_migrate.py  test_model_introspector.py  test_yaml_parser.py
tests/test_core/: conftest.py  test_base_entity.py  test_crud_service.py  test_exceptions.py  test_health.py  test_logging.py  test_middleware.py  test_repository.py  test_setup.py
tests/test_e2e/: conftest.py  test_smoke.py
tests/test_templates/: conftest.py  test_project_templates.py  test_simple_mode.py
